fixed mobile version where books overlapped form while open

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     min-width: 370px;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
 }
 /* Night mode */
@@ -59,9 +59,10 @@
     justify-content: center;
     align-items: center;
     position: absolute;
+    top: 0;
     width: 100%;
-    height: 100%;
-    z-index: 1;
+    min-height: 100%;
+    z-index: 100;
     background: rgba(0, 0, 0, 0.2);
 }
 
